# rust_ev_system_library

./: Cargo.toml  README.md
rust_ev_stream_crypter/: Cargo.toml  README.md
rust_ev_stream_crypter/src/: action.rs  main.rs  subscribers.rs
src/: lib.rs
src/chanel_security/: mod.rs  stream.rs
src/chanel_security/xml/: mod.rs  xml_signature.rs
src/preliminaries/: election_event_context.rs  mod.rs  proof_of_correct_key_generation.rs
src/preliminaries/agreement/: election_event_context.rs  hash_context.rs  mod.rs
src/preliminaries/electoral_model/: factorize.rs  hash_context.rs  mod.rs  primes_mapping_table.rs
src/preliminaries/write_ins/: decoding_write_ins.rs  mod.rs  write_ins_tally_phase.rs
src/tally_phase/: mod.rs
src/tally_phase/mix_offline/: mod.rs  process_plaintexts.rs  verifiy_client_proofs.rs  verify_mix_dec_offline.rs
src/tally_phase/mix_online/: get_mixnet_initial_ciphertexts.rs  mod.rs
test_data/: get-hash-context.json  get-hash-election-event-context.json  prime_tables_1.json  prime_tables_2.json
test_data/agreement/: get-hash-context.json  get-hash-election-event-context.json
test_data/stream/: gen-stream-ciphertext.json  get-stream-plaintext.json
test_data/writeins/: decode-write-ins.json  integer-to-write-in.json  is-write-in-option.json  qr-to-write-in.json  quadratic-residue-to-write-in.json
test_data/xml/: configuration-anonymized.xml  eCH-0222_v3-0_NE_20231124_TT05_without_sig.xml
