[package]
name = "rust_ev_system_library"
description = "Implementation of E-Voting system library functionalities for the Verifier"
version = "0.1.1"
authors = ["Denis Morel"]
edition = "2021"
rust-version = "1.83"
repository = "https://github.com/de-mo/rust_ev_system_library"
readme = "README.md"
categories = ["cryptography", "mathematics"]
keywords = ["math", "e-voting", "crypto"]
license = "LGPL-3.0+"
exclude = ["/specs"]

[dependencies]
#rust_ev_crypto_primitives = "0.6"
rust_ev_crypto_primitives = { path = "../rust_ev_crypto_primitives" }
thiserror = "2"
chrono = "0.4"
rayon = "1"
tracing = "0.1"

# Dev dpendencies
[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
